# curso-python-DIO

./: README.md  github-recovery-codes.txt  pyproject.toml
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
00- Fundamentos/01- Primeiros comandos/: convertendo_tipos.py  primeiro_programa.py  print_input.py  tipos_de_dados.py  variaveis_constates.py
00- Fundamentos/02- Tipo de Operadores/: operadores_de_associacao.py  operadores_logicos.py
01- Estrutura de dados/: 00_declarando_listas.py  00_primeira_função.py  01_retorno_da_funcao.py  03_args_kwargs.py  04_parametro_somente_por_posicao.py  05_parametros_somente_por_nome.py  06_objetos_de_primeira_classe.py  07_escopo_local_e_global.py  09_copy.py  11_extend.py  14_remove.py  18_sorted.py  desafio_01.py  desafio_de_codigo.py  desafio_de_código_01.py
02- POO/: 01_desafio_bicicletaria.py  02_construtores_destrutores.py  03_heranca_simples.py  04_heranca_multipla.py  05_encapsulamento.py  06_propriedades_ex_foo.py  07_propriedades_ex_pessoa.py  08_polimorfismo.py  09_atributos_casse_instancia.py  10_metodo_classe_estatico.py  11_classe_abstrata.py  12_passagem_param.py  13_função interna.py  14_retorna_funcao.py  15_passagem_param.py  16_funcao_interna.py  17_retorna_funcao.py  18_primeiro_decorador.py  19_primeiro_decorador_acucar_sintax.py .py  20_decorador_com_argumentos.py  21_decorador_retorna_valor.py  22_decorador_introspeccao.py  23_iteradores.py  desafio_POO.py  desafio_de_codigo.py  log.txt
02- POO/Data&hora/: 00_dadetime.py  (+4 more)
03-Banco de Dados/: 00_conexao.py
(+16 files in other folders)
